--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,11 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.dronCryptoman.BinanceApiBot.BinanceApiBotApplication.java'
+		)
+	}
+}
